# opengl-lighting-shadows

./: CMakeLists.txt  GL32SDL.vcxproj  GL32SDL.vcxproj.filters  README.md
include/: DepthFBO.h  GameManager.h  Model.h
include/GLUtils/: BlinnPhongProgram.h  CubeMap.hpp  DebugOutput.hpp  GLUtils.hpp  Program.hpp  ShadowProgram.h
shaders/: basic_phong.frag  basic_phong.vert  bunny_light.frag  bunny_light.vert  cube_map.frag  cube_map.geom  cube_map.vert  shadow.frag  shadow.vert
src/: DepthFBO.cpp  GameManager.cpp  GeometryManager.cpp  Model.cpp  main.cpp
